removed navbar padding and fixed some z-index issues

--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -30,6 +30,7 @@
 	justify-content: flex-start;
 	align-items: center;
 	color: white;
+	z-index: 10;
 }
 .footer .logo img {
 	position: relative;
@@ -45,6 +46,7 @@
 .footer .linkscontainer {
 	display: flex;
 	padding-top: 1rem;
+	z-index: 10;
 }
 
 .footer .linklist ul {
